@@ -108,11 +108,11 @@ void ResourceRequest::doUpdatePlatformRequest()
     RetainPtr<CFMutableArrayRef> encodingFallbacks(AdoptCF, CFArrayCreateMutable(kCFAllocatorDefault, fallbackCount, 0));
     for (unsigned i = 0; i != fallbackCount; ++i) {
         RetainPtr<CFStringRef> encodingName(AdoptCF, m_responseContentDispositionEncodingFallbackArray[i].createCFString());
-        CFStringEncoding encoding = CFStringConvertIANACharSetNameToEncoding(encodingName);
+        CFStringEncoding encoding = CFStringConvertIANACharSetNameToEncoding(encodingName.get());
         if (encoding != kCFStringEncodingInvalidId)
-            CFArrayAppendValue(encodingFallbacks, reinterpret_cast<const void*>(encoding));
+            CFArrayAppendValue(encodingFallbacks.get(), reinterpret_cast<const void*>(encoding));
     }
-    setContentDispositionEncodingFallbackArray(cfRequest, encodingFallbacks);
+    setContentDispositionEncodingFallbackArray(cfRequest, encodingFallbacks.get());
 
     if (m_cfRequest) {
         RetainPtr<CFHTTPCookieStorageRef> cookieStorage(AdoptCF, CFURLRequestCopyHTTPCookieStorage(m_cfRequest.get()));
@@ -151,9 +151,9 @@ void ResourceRequest::doUpdateResourceRequest()
     m_responseContentDispositionEncodingFallbackArray.clear();
     RetainPtr<CFArrayRef> encodingFallbacks(AdoptCF, copyContentDispositionEncodingFallbackArray(m_cfRequest.get()));
     if (encodingFallbacks) {
-        CFIndex count = CFArrayGetCount(encodingFallbacks);
+        CFIndex count = CFArrayGetCount(encodingFallbacks.get());
         for (CFIndex i = 0; i < count; ++i) {
-            CFStringEncoding encoding = reinterpret_cast<CFIndex>(CFArrayGetValueAtIndex(encodingFallbacks, i));
+            CFStringEncoding encoding = reinterpret_cast<CFIndex>(CFArrayGetValueAtIndex(encodingFallbacks.get(), i));
             if (encoding != kCFStringEncodingInvalidId)
                 m_responseContentDispositionEncodingFallbackArray.append(CFStringGetNameOfEncoding(encoding));
         }
