@@ -1,3 +1,12 @@
+2008-12-05  Adam Roben  <aroben@apple.com>
+
+        Windows build fix after r39026
+
+        * platform/network/cf/ResourceRequestCFNet.cpp:
+        (WebCore::ResourceRequest::doUpdatePlatformRequest):
+        (WebCore::ResourceRequest::doUpdateResourceRequest):
+        Add some missing .get()s.
+
 2008-12-05  Alexey Proskuryakov  <ap@webkit.org>
 
         Tiger build fix.
